# barrage

./: .gitignore  Cargo.toml  README.md  config.yaml
config/: dep.yaml  traffic.yaml
docker/: Dockerfile
k8s/: deployment.yaml  hpa.yaml
src/: cli.rs  config.rs  k8s_gen.rs  lib.rs  main.rs  sender.rs  server.rs
src/req_type/: http.rs  kafka.rs  mod.rs
tests/: config_tests.rs  integration_test.rs  sender_tests.rs
