[package]
name = "barrage"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
# rdkafka is complex for a base code, I'll use a placeholder or adding it if necessary.
# Let's add it but comment it out or keep it simple.
# rdkafka = { version = "0.36", features = ["dynamic-linking"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"
k8s-openapi = { version = "0.23.0", features = ["v1_31"] }
kube = { version = "0.97.0", features = ["derive"] }
